# llm-pipeline-profiler

./: .gitignore  PROJECT_SPEC.md  README.md  docker-compose.yml  requirements.txt  test_auto_instrument.py  test_combined_simulation.py  test_cpp_sampler.py  test_flamegraph.py  test_large_trace_simulation.py  test_ngrok.py  test_throughput.py
.agents/rules/: ponytail.md
dashboard/: Dockerfile  package-lock.json  package.json  prisma.config.ts
dashboard/prisma/: schema.prisma
dashboard/prisma/migrations/20260716073243_init/: migration.sql
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/api/runs/: route.ts
dashboard/src/app/api/runs/[id]/: route.ts
dashboard/src/app/api/stages/[id]/trace/: route.ts
dashboard/src/app/api/stream/: route.ts
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/dashboard/[runId]/: page.tsx
dashboard/src/components/: Flamegraph.tsx  MemoryChart.tsx  RunCompareTable.tsx  ThroughputChart.tsx  Timeline.tsx
dashboard/src/lib/: db.ts  parseTrace.ts  sse.ts
dashboard/src/types/: run.ts
examples/: kaggle_notebook_example.ipynb
profiler-lib/: README.md  pyproject.toml  setup.py
profiler-lib/llm_profiler/: __init__.py  auto_instrument.py  exporter.py  sampler_bridge.py  schema.py  tracer.py
profiler-lib/llm_profiler/collectors/: cpu_mem.py  gpu.py  torch_profiler.py
sampler-cpp/: CMakeLists.txt  README.md
sampler-cpp/bindings/: pybind_wrapper.cpp
sampler-cpp/src/: ipc_server.cpp  ipc_server.h  main.cpp  main.h  nvml_reader.cpp  nvml_reader.h  proc_reader.cpp  proc_reader.h  standalone_main.cpp
