[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-profiler"
version = "0.1.0"
description = "A profiling system for LLM inference/training pipelines run on Kaggle notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=1.10.0,<3.0.0",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_profiler*"]
